Add publisher name

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "color-theme"
     ],
     "icon": "icon.png",
+    "publisher": "NickCernis",
     "contributes": {
         "themes": [
             {
